# astrcode-pr-review-agent

./: .gitignore  Cargo.toml  README.md  extension.json
prompts/: README.md  aggregate-review.md  few-shots.md  file-review.md  global-review.md  orientation-review.md  pr-review-bot.md
src/: lib.rs  main.rs  poller.rs  review.rs  staging.rs  status.rs  types.rs  webhook.rs
