[package]
name = "astrcode-pr-review-agent"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace]

[[bin]]
name = "astrcode-pr-review-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
astrcode-extension-sdk = { git = "https://github.com/whatevertogo/astrcodey", package = "astrcode-extension-sdk" }
fs2 = "0.4"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
